syntax = "proto3";
package protobuf;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;

service Worker {
	//service to master
	rpc ShutDown (shutDownRequest) returns (shutDownResponse) {}
	rpc PEval (pEvalRequest) returns (pEvalResponse) {}
	rpc IncEval (incEvalRequest) returns (incEvalResponse) {}
	rpc ExchangeMessage (exchangeRequest) returns (exchangeResponse) {}
	rpc Assemble (assembleRequest) returns (assembleResponse) {}
	//service to worker
	rpc SSSPSend (sSSPMessageRequest) returns (sSSPMessageResponse) {}
    rpc simSend (simMessageRequest) returns (simMessageResponse) {}
    rpc PRSend (pRMessageRequest) returns (pRMessageResponse) {}
}

message shutDownRequest {
}
message shutDownResponse {
	int32 iterationNum = 1;
}

message exchangeRequest {
}

message exchangeResponse {
	bool ok = 1;
}

message pEvalRequest {
}

message pEvalResponse {
	bool ok = 1;
}

message incEvalRequest {
}

message incEvalResponse {
	bool update = 1;
}

message assembleRequest {	
}
message assembleResponse {
	bool ok = 1;
}
message sSSPMessageRequest {
	repeated sSSPMessageStruct pair = 1;
}
message sSSPMessageStruct {
	int64 nodeID = 1;
	double distance = 2;
}
message sSSPMessageResponse {
}
message simMessageRequest {
    repeated simMessageStruct pair = 1;
}
message simMessageResponse {
}
message simMessageStruct {
    int64 patternId = 1;
    int64 dataId = 2;
}

message pRMessageRequest {
    repeated pRMessageStruct pair = 1;
}
message pRMessageResponse {
}
message pRMessageStruct {
    int64 nodeID = 1;
    double prVal = 2;
}
